tests/baselines/reference/parserModifierOnStatementInBlock4.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserModifierOnStatementInBlock4.ts (3 errors) ====
    {
       export function bar() {
       ~~~~~~
!!! error TS1129: Statement expected.
       ~~~~~~~~~~~~~~~~~~~~~~~
       }
    ~~~~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    }
    ~
!!! error TS1128: Declaration or statement expected.
    